--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,5 +24,6 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GH_TOKEN }}
         publish_dir: ./public
+        token: ${{ secrets.GH_TOKEN }}
