--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "themes/papermod"]
-	path = themes/papermod
+[submodule "themes/hugo-PaperMod"]
+	path = themes/hugo-PaperMod
+
 	url = https://github.com/adityatelange/hugo-PaperMod.git
